sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: not found: value nbr
	for(i<-0 to nbr-2){
                    ^AlgCocktailSort1:13: error: not found: value nbr
     for(i<-0 to nbr-2){
                 ^