sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
var indice1=1;
var indice2=1;
do{
	indice1=0;
     indice2=0;
	for(i<-0 to nbr-2){
             if(plusPetit(i,i+1)==false){
           	echange(i,i+1);
           	indice1 +=1;
           	}}
     for(i<-0 to nbr-2){
             if(plusPetit(i,i+1)==false){
           	echange(i,i+1);
           	indice2 += 1;
           	}
           }
    } while(indice1!=0 || indice2 !=0)
 }